--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="game">
  <h3>Total score</h3>
 <h1 id="score"> 0</h1>
-<img id="dice" src="img/dice1.png"/>
+<img id="dice" src="./img/dice1.png"/>
 <button id=rollButton >Roll the dice!</button>
 
 
